--- a/public/.github/workflows/main.yml
+++ b/public/.github/workflows/main.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - master
+      - feature/codigo-leon
   pull_request:
     branches:
       - master
@@ -25,4 +26,3 @@ jobs:
 
     - name: Run tests
       run: npm test
-      
